# hex-minesweeper

./: Cargo.toml  README.md
.github/workflows/: ci.yml  deploy-gh-pages.yml  sanity_check.yml
site/: index.html
src/: main.rs
