[package]
name = "hex-minesweeper"
version = "0.1.0"
edition = "2021"

[profile.release]
# `opt-level = 'z'` sometimes gives smaller size than 's', but it depends on the exact case
opt-level = 's'

[dependencies]
# Keep only what is really used to keep binary small and compilation fast
bevy = { version = "0.11.0", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_sprite",
  "bevy_winit",
  "multi-threaded",
  "png",
  "webgl2",
  # Might be used in the future
  # "bevy_audio",
  # "bevy_text",
  # "bevy_ui",
  # "default_font",
] }
hexx = "0.9.2"
